update Admin controller with proper admin verification

--- a/app/views/admins/projects/show.html.erb
+++ b/app/views/admins/projects/show.html.erb
@@ -1,4 +1,4 @@
-<% project.each do |project| %>
+<% @project.each do |project| %>
     <%=	project.title %>
     <%= project.description %>
     <%=	 image_tag project.dash_image.url %>
