--- a/app/views/admins/projects/create.html.erb
+++ b/app/views/admins/projects/create.html.erb
@@ -1,8 +1,16 @@
+<h1>Admin Create Product Form</h1>
+
 <%= form_for @project, url: project_path, html: {multipart: true} do |f| %>
-    <%=	f.file_field :dash_image  %>
-    <%=	f.file_field :cover_photo  %>
-    <%=	f.file_field :image_1  %>
-    <%=	f.file_field :image_2  %>
-    <%=	f.file_field :image_3  %>
-    <%=	f.file_field :image_4  %>
+    <%= f.label :dash_image %>
+        <%=	f.file_field :dash_image  %>
+    <%= f.label :cover_photo %>
+        <%=	f.file_field :cover_photo  %>
+    <%= f.label :image_1 %>
+        <%=	f.file_field :image_1  %>
+    <%= f.label :image_2 %>
+        <%=	f.file_field :image_2  %>
+    <%= f.label :image_3 %>
+        <%=	f.file_field :image_3  %>
+    <%= f.label :image_4 %>
+        <%=	f.file_field :image_4  %>
 <% end %>
