--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,4 +1,4 @@
-
+<h1>product show page</h1>
     <%=	project.title %>
     <%= project.description %>
     <%=	 image_tag project.dash_image.url %>
