refactor paperclip code in Project.rb; create admin/blogs_controller

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,19 +1,35 @@
 
 <%= form_for @project, url: projects_path, html: {multipart: true} do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-    <%= f.label :dash_image %>
-    <%=	f.file_field :dash_image  %>
-    <%= f.label :cover_photo %>
-    <%=	f.file_field :cover_photo  %>
-    <%= f.label :image_1 %>
-    <%=	f.file_field :image_1  %>
-    <%= f.label :image_2 %>
-    <%=	f.file_field :image_2  %>
-    <%= f.label :image_3 %>
-    <%=	f.file_field :image_3  %>
-    <%= f.label :image_4 %>
-    <%=	f.file_field :image_4  %>
+   <section>
+        <%= f.label :title %>
+        <%= f.text_field :title %>
+   </section>
+   <section>
+        <%= f.label :description %>
+        <%= f.text_field :description %>
+   </section>
+   <section>
+        <%= f.label :dash_image %>
+        <%=	f.file_field :dash_image  %>
+    </section>
+    <section>
+        <%= f.label :cover_photo %>
+        <%=	f.file_field :cover_photo  %>
+    </section>
+    <section>
+        <%= f.label :image_1 %>
+        <%=	f.file_field :image_1  %>
+    </section>
+    <section>
+        <%= f.label :image_2 %>
+        <%=	f.file_field :image_2  %>
+    </section>
+    <section>
+        <%= f.label :image_3 %>
+        <%=	f.file_field :image_3  %>
+    </section>
+    <section>
+        <%= f.label :image_4 %>
+        <%=	f.file_field :image_4  %>
+    </section>
 <% end %>
