created admin/blogs controller

--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,5 +1,7 @@
 <!--Write loop to  view all projects-->
-<h1>This is the admin dashboard.</h1>
+<nav>
+  <h1>This is the admin dashboard.</h1>
+</nav>
 
 <%= link_to 'Add Your Project', new_admin_project_path %>
 
