Update admin/blogs with destroy method. create admin blog view

--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,6 +1,7 @@
 <!--Write loop to  view all projects-->
 <nav>
   <h1>This is the admin dashboard.</h1>
+  <%= link_to 'Admin Blog Page', admin_blogs_path %>
 </nav>
 
 <%= link_to 'Add Your Project', new_admin_project_path %>
