Created blog forms

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -32,4 +32,5 @@
         <%= f.label :image_4 %>
         <%=	f.file_field :image_4  %>
     </section>
+    <section><%= f.submit %></section>
 <% end %>
