--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @project, url: projects_path, html: {multipart: true} do |f| %>
+<%= form_for @project, url: admin_projects_path, html: {multipart: true} do |f| %>
    <section>
         <%= f.label :title %>
         <%= f.text_field :title %>
@@ -33,4 +33,5 @@
         <%=	f.file_field :image_4  %>
     </section>
     <section><%= f.submit %></section>
+
 <% end %>
