--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,9 +1,10 @@
-<h1>product show page</h1>
-    <%=	project.title %>
-    <%= project.description %>
-    <%=	 image_tag project.dash_image.url %>
-    <%=	 image_tag project.cover_photo.url %>
-    <%=	 image_tag project.image_1.url %>
-    <%=	 image_tag project.image_2.url %>
-    <%=	 image_tag project.image_3.url %>
-    <%=	 image_tag project.image_4.url %>
+<h1>project show page</h1>
+<%= link_to 'Admin Home', admin_projects_path %>
+    <%=	@project.title %>
+    <%= @project.description %>
+    <%=	 image_tag @project.dash_image.url %>
+    <%=	 image_tag @project.cover_photo.url %>
+    <%=	 image_tag @project.image_1.url %>
+    <%=	 image_tag @project.image_2.url %>
+    <%=	 image_tag @project.image_3.url %>
+    <%=	 image_tag @project.image_4.url %>
