--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<h2>This will be the user view. Will input design once done with Backend</h2>
+
+<%= render 'projects' %>
