--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -2,9 +2,7 @@
     <%=	project.title %>
     <%= project.description %>
     <%=	image_tag project.dash_image.url %>
-    <%=	image_tag project.cover_photo.url %>
-    <%=	image_tag project.image_1.url %>
-    <%=	image_tag project.image_2.url %>
-    <%=	image_tag project.image_3.url %>
-    <%=	image_tag project.image_4.url %>
+
+    <%= link_to 'View', project %>
+
 <%end%>
