--- a/app/views/admin/projects/_projects.html.erb
+++ b/app/views/admin/projects/_projects.html.erb
@@ -2,6 +2,7 @@
     <%=	project.title %>
     <%= project.description %>
     <%=	image_tag project.dash_image.url %>
-    <%= link_to 'View Product', admin_project_path(project) %>
+    <%= link_to 'View', admin_project_path(project) %>
+    <%= link_to 'Edit', edit_admin_project_path(project) %>
     <%= button_to 'Destroy', admin_project_path(project), method: :delete  %>
 <%end%>
