--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,29 @@
 </head>
 <body>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+    <header>
+        <nav>
+          <section class="nav_left">
 
-<%= yield %>
+          </section>
+          <section class="nav_right">
+            <article class>
+
+            </article>
+          </section>
+        </nav>
+    </header>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <section class="yield">
+      <%= yield %>
+    </section>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
