--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,17 @@
 <%= link_to 'Home', root_path %>
 
-<h1><%=	@project.title %></h1>
+<section class="cover">
+    <%=	 image_tag @project.cover_photo.url %>
+</section>
 
-<%= @project.description %>
-
-<%=	 image_tag @project.cover_photo.url %>
+<section>
+  <article class="project_title">
+    <h1><%=	@project.title %></h1>
+  </article>
+  <article class="project_description">
+    <%= @project.description %>
+  </article>
+</section>
 <%=	 image_tag @project.image_1.url %>
 <%=	 image_tag @project.image_2.url %>
 <%=	 image_tag @project.image_3.url %>
