--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -6,7 +6,8 @@
    </section>
    <section>
         <%= f.label :description %>
-        <%= f.text_field :description %>
+        <%= f.text_area :description, :size => '30x10' %>
+
    </section>
    <section>
         <%= f.label :dash_image %>
