--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
     <header>
-        <nav>
           <section class="nav_left">
-
-          </section>
-          <section class="nav_right">
-            <article class>
-
+            <article class="logo">
+              <%= image_tag 'whitelogo.png'  %>
             </article>
           </section>
-        </nav>
+          <section class="nav_middle">
+          </section>
+          <section class="nav_right">
+            <!--<article>-->
+            <nav>
+                <ul>
+                  <li><%= link_to 'Work', projects_path %></li>
+                  <li><%= link_to 'Blog', blogs_path %></li>
+                  <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <!--</article>-->
+          </section>
     </header>
 
     <p class="notice"><%= notice %></p>
@@ -29,6 +36,9 @@
     </section>
 
     <footer>
+      <article>
+
+      </article>
 
     </footer>
 
