--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,2 @@
-<h1>Projects#index</h1>
-<h2>This will be the user view. Will input design once done with Backend</h2>
-
+<section class='dash_padding'> </section>
 <%= render 'projects' %>
