--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,18 +1,21 @@
 <%= link_to 'Home', root_path %>
 
 <section class="cover">
-    <%=	 image_tag @project.cover_photo.url %>
+  <%= image_tag @project.cover_photo.url, class: 'style_image' %>
 </section>
 
-<section>
+<section class='project_info_space'>
   <article class="project_title">
-    <h1><%=	@project.title %></h1>
+    <h1><%= @project.title %></h1>
   </article>
-  <article class="project_description">
-    <%= @project.description %>
+  <article class="project_info_right">
+    <article class='project_description'>
+      <%= @project.description %>
+    </article>
   </article>
 </section>
-<%=	 image_tag @project.image_1.url %>
-<%=	 image_tag @project.image_2.url %>
-<%=	 image_tag @project.image_3.url %>
-<%=	 image_tag @project.image_4.url %>
+<%= image_tag @project.image_1.url, class: 'style_image_individual' %>
+<%= image_tag @project.image_2.url, class: 'style_image_individual' %>
+<%= image_tag @project.image_3.url, class: 'style_image_individual' %>
+<%= image_tag @project.image_4.url, class: 'style_image_individual' %>
+
