--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -3,8 +3,7 @@
     <% @projects.each do |project| %>
         <%#= project.title %>
         <%#= project.description %>
-        <%= image_tag project.dash_image.url, class: 'style_image' %>
-        <%= link_to 'View', project %>
+        <%= link_to(image_tag(project.dash_image.url), project, class: 'style_image') %>
     <% end %>
   </article>
 </section>
