update styling of footer buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,18 @@
   </section>
 
   <section class='footer_split'>
-    <%= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %>
-    <%= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %>
-    <%= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %>
-    <%= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %>
+<ul>
+   <li> <%= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %> </li> 
+   <li> <%= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %> </li>
+   <li> <%= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %> </li>
+   <li> <%= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %> </li>
+</ul>
+  </section>
+
+  <section class='footer_split'></section>
+
+  <section>
+    <p> Matt Mitchell 2014</p>
   </section>
 
 </footer>
