--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,3 +93,18 @@ footer {
     height: 100px;
     padding-top: 55px;
 }
+
+footer ul {
+    list-style: none;
+}
+
+footer ul li {
+    float: left;
+    padding-right: 45px;
+
+}
+
+.behance {
+    display: inline-block;
+    background: url("behance.png")
+}
