Update styling by removing heights

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -20,10 +20,10 @@
 
 // INDIVIDUAL PRODUCT STYLING
 .project_info_space {
+  overflow: hidden;
   margin: 0;
   background: #282828;
   color: white;
-  height: 150px;
   border-top: 2px solid #e33d3d;
 }
 
