--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,13 @@
   <section class="nav_middle">
   </section>
   <section class="nav_right">
-    <!--<article>-->
     <nav>
       <ul>
-        <li><%= link_to 'Work', projects_path %></li>
+        <li><%= link_to 'Work', root_path %></li>
         <li><%= link_to 'Blog', blogs_path %></li>
         <li><a href="#">About</a></li>
       </ul>
     </nav>
-    <!--</article>-->
   </section>
 </header>
 
@@ -42,20 +40,17 @@
   </section>
 
   <section class='footer_split'>
-<ul>
-   <li> <%= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %> </li> 
-   <li> <%= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %> </li>
-   <li> <%= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %> </li>
-   <li> <%= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %> </li>
-</ul>
+    <ul>
+      <li> <%= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %> </li>
+      <li> <%= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %> </li>
+      <li> <%= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %> </li>
+      <li> <%= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %> </li>
+    </ul>
   </section>
-
   <section class='footer_split'></section>
-
   <section>
     <p> Matt Mitchell 2014</p>
   </section>
-
 </footer>
 
 </body>
