--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require_tree .
  */
 body {
-   margin: 0px;
+    margin: 0px;
 }
 
 header {
@@ -72,7 +72,7 @@ nav ul li a:hover {
 }
 
 .notice {
-    clear:both;
+    clear: both;
 }
 
 .yield {
@@ -84,13 +84,15 @@ footer {
     height: 100px;
     margin-top: 15px;
     border-top: 2px solid red;
-    height: 150px;
+    /*height: 150px;*/
+    overflow: hidden;
+    padding-bottom: 50px;
 }
 
 .footer_split {
     float: left;
     width: 33.3%;
-    height: 100px;
+    /*height: 100px;*/
     padding-top: 55px;
 }
 
@@ -101,7 +103,11 @@ footer ul {
 footer ul li {
     float: left;
     padding-right: 45px;
+}
 
+footer section p {
+    clear: both;
+    text-align: center;
 }
 
 .behance {
