removed image-4 from db. Figure out why show page is FREAKIN

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,12 +87,13 @@ footer {
     /*height: 150px;*/
     overflow: hidden;
     padding-bottom: 50px;
+    clear: both;
 }
+
 
 .footer_split {
     float: left;
     width: 33.3%;
-    /*height: 100px;*/
     padding-top: 55px;
 }
 
