--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -9,7 +9,7 @@
 }
 
 .project_loop {
-  width: 33%;
+  //width: 33%;
   //  margin: 0px, 0px, 15px, 0px;
 }
 
@@ -50,4 +50,9 @@
   width: 100%;
   height: auto;
   margin-top: 15px;
+}
+
+.dash_image {
+  width: 33%;
+  float: left;
 }
