--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -3,7 +3,9 @@
     <% @projects.each do |project| %>
         <%#= project.title %>
         <%#= project.description %>
-        <%= link_to(image_tag(project.dash_image.url), project, class: 'style_image') %>
+        <section class =dash_image>
+            <%= link_to(image_tag(project.dash_image.url), project, class: 'style_image') %>
+        </section>
     <% end %>
   </article>
 </section>
