update style of project thumbnail

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -46,10 +46,11 @@
   padding: 15px;
 }
 
-.style_image_individual {
+.style_image {
   width: 100%;
   height: auto;
   margin-top: 15px;
+  display: inline-block;
 }
 
 .dash_image {
