Update styling on individual product pages

--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,4 +1,5 @@
 <section>
+  <section class='dash_padding'> </section>
   <article class="project_loop">
     <% @projects.each do |project| %>
         <%#= project.title %>
