--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -3,10 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 //MAIN PAGE STYLING
-.dash_padding {
-  height: 15px;
-  border-bottom: 2px solid #e33d3d;
-}
 
 .project_loop {
   //width: 33%;
@@ -18,6 +14,23 @@
   height: auto;
 }
 
+.style_image {
+  width: 100%;
+  height: auto;
+  margin-top: 15px;
+  display: inline-block;
+}
+
+.dash_image {
+  width: 33.33%;
+  float: left;
+}
+
+.dash_padding {
+  height: 15px;
+  border-bottom: 2px solid #e33d3d;
+}
+
 // INDIVIDUAL PRODUCT STYLING
 .project_info_space {
   overflow: hidden;
@@ -27,7 +40,7 @@
   border-top: 2px solid #e33d3d;
 }
 
-.cover {
+.ind_project_image {
   width: 100%;
   margin: 0px;
 }
@@ -46,14 +59,3 @@
   padding: 15px;
 }
 
-.style_image {
-  width: 100%;
-  height: auto;
-  margin-top: 15px;
-  display: inline-block;
-}
-
-.dash_image {
-  width: 33%;
-  float: left;
-}
