--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,12 +1,20 @@
 <section>
-  <section class='dash_padding'> </section>
+  <section class='dash_padding'></section>
   <article class="project_loop">
     <% @projects.each do |project| %>
-        <%#= project.title %>
-        <%#= project.description %>
         <section class='dash_image'>
           <%= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
+          <section class='hidden_content'>
+            <article>
+              <%= project.title %>
+            </article>
+
+            <article>
+              <%= project.description %>
+            </article>
+          </section>
         </section>
+
     <% end %>
   </article>
 </section>
