Update hover effect, change to coffeescript

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -33,12 +33,9 @@
 
 .hidden_content {
   display: none;
-  background: rgba(255,255,255,0.7);
+  background: rgba(0,0,0,0.7);
+  color: red;
 }
-
-//.hidden_content.hidden {
-//  display: none;
-//}
 
 // INDIVIDUAL PRODUCT STYLING
 .project_info_space {
