--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,10 +43,14 @@
 
   <section class='footer_split'>
     <ul>
-      <li> <%= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %> </li>
-      <li> <%= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %> </li>
-      <li> <%= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %> </li>
-      <li> <%= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %> </li>
+      <li class='behance'><a href='https://www.behance.net/meetchell'> </a></li>
+      <li class='dribble'><a href='https://dribbble.com/mattMEETCHELL'> </a></li>
+      <li class='linkedin'><a href='http://www.linkedin.com/pub/matthew-mitchell/38/a29/954'> </a></li>
+      <li class='twitter'><a href='https://twitter.com/mattMEETCHELL'> </a></li>
+      <!--<li> <%#= link_to(image_tag('behance.png'), 'https://www.behance.net/meetchell') %> </li>-->
+      <!--<li> <%#= link_to(image_tag('dribbble.png'), 'https://dribbble.com/mattMEETCHELL') %> </li>-->
+      <!--<li> <%#= link_to(image_tag('linkedin.png'), 'http://www.linkedin.com/pub/matthew-mitchell/38/a29/954') %> </li>-->
+      <!--<li> <%#= link_to(image_tag('twitter.png'), 'https://twitter.com/mattMEETCHELL') %> </li>-->
     </ul>
   </section>
   <section class='footer_split'></section>
