--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,3 +18,6 @@
 <section class='ind_project_image'><%= image_tag @project.image_2.url, class: 'style_image' %></section>
 <section class='ind_project_image'><%= image_tag @project.image_3.url, class: 'style_image' %></section>
 
+<section class='ind_project_padding'>
+  <section class='home_button'></section>
+</section>
