--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,6 +95,7 @@ footer {
     border-top: 2px solid red;
     overflow: hidden;
     clear: both;
+    margin-bottom: 0;
 }
 
 .footer_split {
@@ -186,4 +187,18 @@ footer section p {
     .footer_split {
         width: 100%;
     }
+
+    .nav_left {
+        height: 120px;
+    }
+    .nav_right {
+        height: 30px;
+    }
+
+    nav ul li {
+        padding-top: 0;
+        padding-right: 25%;
+    }
+
+
 }
