--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -22,6 +22,11 @@
   padding: 0;
 }
 
+//#dash_image:hover .hidden_content {
+//  color: red;
+//  padding: 20px;
+//}
+
 .dash_padding {
   padding: 1%;
   border-bottom: 2px solid #e33d3d;
