testing git issue

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -79,6 +79,7 @@
 .home_button:hover {
   background: url('sprite-sheet.png') no-repeat -306px -51px;
   height: 35px;
+  // fake stuff!
 }
 
 // SMALLER SCREENS
