--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: auto;
   display: inline-block;
+  margin-bottom: 10px;
 }
 
 #dash_image {
@@ -85,5 +86,8 @@
 @media screen and (max-width: 700px) {
   #dash_image {
     width: 50%;
+  }
+  #dash_image img {
+    margin-bottom: -5px;
   }
 }
