--- a/app/views/admin/projects/_projects.html.erb
+++ b/app/views/admin/projects/_projects.html.erb
@@ -1,8 +1,14 @@
 <% @projects.each do |project| %>
-    <%=	project.title %>
-    <%= project.description %>
-    <%=	image_tag project.dash_image.url %>
-    <%= link_to 'View', admin_project_path(project) %>
-    <%= link_to 'Edit', edit_admin_project_path(project) %>
-    <%= button_to 'Destroy', admin_project_path(project), method: :delete  %>
-<%end%>
+    <section class="admin_project">
+      <section class="admin_project_info">
+        <%= image_tag project.dash_image.url %>
+        <p><%= project.title %>
+        <%= project.description %></p>
+      </section>
+      <ul class='admin_buttons'>
+        <li><%= link_to 'View', admin_project_path(project) %>                        </li>
+        <li><%= link_to 'Edit', edit_admin_project_path(project) %>                   </li>
+        <li><%= button_to 'Destroy', admin_project_path(project), method: :delete %> </li>
+      </ul>
+    </section>
+<% end %>
