--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Home', root_path %>
+<%#= link_to 'Home', root_path %>
 
 <section class="ind_project_image">
   <%= image_tag @project.cover_photo.url, class: 'style_image' %>
