--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,9 @@
 </section>
 
 <footer>
-  <section class='footer_split'>
+  <!--<section class='footer_split'>-->
 
-  </section>
+  <!--</section>-->
 
   <section class='footer_split'>
     <ul>
@@ -58,7 +58,7 @@
       <p> Matt Mitchell 2014</p>
     </section>
   </section>
-  <section class='footer_split'></section>
+  <!--<section class='footer_split'></section>-->
 </footer>
 
 </body>
