--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,8 +22,8 @@ header {
 }
 
 .logo_container {
-    /*width: 100%;*/
-    margin-left: 35%;
+    width: 100%;
+    /*margin-left: 35%;*/
     margin-top: 2.5%;
 }
 
@@ -31,6 +31,8 @@ header {
     background: url('whitelogo.png');
     background-repeat: no-repeat;
     height: 87px;
+    width: 92px;
+    margin: 0 auto;
 }
 
 nav ul {
@@ -58,21 +60,21 @@ nav ul li a:hover {
 
 .nav_left {
     float: left;
-    width: 33%;
+    width: 33.3%;
     background: red;
     height: 120px;
 }
 
 .nav_middle {
     float: left;
-    width: 33%;
+    width: 33.3%;
     background: #282828;
     height: 120px;
 }
 
 .nav_right {
     float: left;
-    width: 34%;
+    width: 33.3%;
     background: #282828;
     height: 120px;
 }
@@ -102,7 +104,7 @@ footer {
     margin: 0 auto;
     /*padding-top: 5%;*/
     /*padding-bottom: 5%;*/
-    width: 300px;
+    width: 500px;
 }
 
 footer ul {
@@ -112,7 +114,8 @@ footer ul {
 
 footer ul li {
     display: inline-block;
-    margin-left: 5%;
+    margin-left: 7%;
+    margin-right: 7%;
     padding-right: 42px;
 
 }
@@ -173,6 +176,7 @@ footer section p {
         background: red;
         padding: 0;
         padding-top: 15px;
+        height: 120px;
     }
     .nav_middle {
         display: none;
@@ -189,12 +193,17 @@ footer section p {
     }
 
     .footer_split {
-        width: 100%;
+        /*width: 100%;*/
+        margin: 0 auto;
+        width: 310px;
+    }
+    footer ul li {
+        width: 44px;
+        padding: 0;
+        margin-left: 7px;
+        margin-right: 7px;
     }
 
-    .nav_left {
-        height: 120px;
-    }
     .nav_right {
         height: 30px;
         padding: 5% 0;
