--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -2,17 +2,24 @@
   <section class='dash_padding'></section>
   <article class="project_loop">
     <% @projects.each do |project| %>
-          <section class="dash_image">
-            <%= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
-            <section class='hidden_content'>
-              <article>
-                <%= project.title %>
-              </article>
-              <article>
-                <%= project.description %>
-              </article>
-            </section>
+        <section class="dash_image">
+
+
+          <img src="<%= project.dash_image.url %>" class="style_image">
+
+          <section class='hidden_content'>
+            <article>
+              <%= project.title %>
+            </article>
+            <article>
+              <%= project.description %>
+            </article>
           </section>
+
+          </img>
+
+          <%#= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
+        </section>
     <% end %>
   </article>
   <section class='footer_padding'></section>
